# ninomiya

./: .travis.yml  Cargo.toml  LICENSE  README.md  shell.nix
data/: style.css
src/: client.rs  config.rs  demo.rs  gtk_test_runner.rs  gui.rs  hints.rs  icon.rs  image.rs  main.rs  notify_codegen.rs  server.rs
src/dbus_codegen/: client.rs  server.rs
